@@ -27,14 +27,35 @@
    pair is contained in the users database.  */
 gcry_error_t usersdb_check (const char *serialno, const char *username);
 
+/* This function tries to lookup a username by it's serial number;
+   this is only possible in case the specified serial number SERIALNO
+   is associated with exactly one username.  The username will be
+   stored in newly allocated memory in *USERNAME.  Returns proper
+   error code.  */
 gcry_error_t usersdb_lookup_by_serialno (const char *serialno, char **username);
 
+/* This function tries to lookup a serial number by it's username;
+   this is only possible in case the specified username USERNAME is
+   associated with exactly one serial number.  The serial number will
+   be stored in newly allocated memory in *SERIALNO.  Returns proper
+   error code.  */
 gcry_error_t usersdb_lookup_by_username (const char *username, char **serialno);
 
+/* This function removes entries from the users database.  Either
+   USERNAME or SERIALNO must be non-NULL.  If USERNAME is non-NULL and
+   serialno is NULL, remove all entries for the given username; if
+   USERNAME is NULL and serialno is non-NULL, remove all entries fot
+   the specified serial number; if USERNAME and SERIALNO are non-NULL,
+   remove exactly this entry.  Returns proper error code.  */
 gcry_error_t usersdb_remove (const char *username, const char *serialno);
 
+/* This function adds an entry to the users database; USERNAME and
+   SERIALNO must not be NULL.  This is a no-operation in case USERNAME
+   is already associated with SERIALNO.  */
 gcry_error_t usersdb_add (const char *username, const char *serialno);
 
+/* This functions lists information from the users database to the
+   stream STREAM.  Return proper error code.  */
 gcry_error_t usersdb_list (FILE *stream);
 
 #endif
