@@ -1,3 +1,7 @@
+2005-12-11  Moritz Schulte  <moritz@g10code.com>
+
+	* usersdb.c, usersdb.h: Added documentation.
+
 2005-12-10  Moritz Schulte  <moritz@g10code.com>
 
 	* support.c (directory_process): New function.
